<resources>
    <string name="app_name">TicTic</string>
    <string name="action_settings">Settings</string>
    <string name="telalogin_tv_email">Email</string>
    <string name="telalogin_et_email">Enter Account email...</string>
    <string name="telalogin_tv_senha">Password</string>
    <string name="telalogin_btn_registrar">Sign up</string>
    <string name="telalogin_btn_acessar">Access Account</string>
    <string name="telalogin_tv_esqueci_senha">I forgot my password?</string>
    <string name="telalogin_et_senha">Enter the password of your account...</string>
    <string name="telalogin_titulo_activity">Sign in TicTic</string>
    <string name="telaregistrarusuario_titulo">Sign up for TicTic</string>
    <string name="telalogin_mgserro_et_email_campo_vazio">The email field is required!</string>
    <string name="telalogin_msgerro_et_email_email_formato_incorreto">The email entered is incorrect!</string>
    <string name="telalogin_msgerro_et_senha_campo_vazio">The password field is required!</string>
    <string name="telalogin_msgerro_emailesenha_incorretos">Oops : Email or password is incorrect!</string>
    <string name="telaregistrarusuario_tv_nome">Name</string>
    <string name="telaregistrarusuario_et_nome">Enter your first name...</string>
    <string name="telaregistrarusuario_tv_sobrenome">Last name</string>
    <string name="telaregistrarusuario_et_sobrenome">Enter your last name...</string>
    <string name="telaregistrarusuario_tv_email">Email</string>
    <string name="telaregistrarusuario_et_email">Enter your email...</string>
    <string name="telaregistrarusuario_tv_senha">Password</string>
    <string name="telaregistrarusuario_et_senha">Enter the password of your account...</string>
    <string name="telaregistrarusuario_et_confirmar_senha">Re-enter the password for your account...</string>
    <string name="telaregistrarusuario_btn_salvar">Save</string>
    <string name="telaregistrarusuario_msgerro_et_nome">The name field is required!</string>
    <string name="telaregistrarusuario_msgerro_et_sobrenome">The last name field is required!</string>
    <string name="telaregistrarusuario_msgerro_et_dtnascimento">The date of birth field is required!</string>
    <string name="telaregistrarusuario_msgerro_et_email">The email field is required!</string>
    <string name="telaregistrarusuario_msgerro_et_senha">The password field is required!</string>
    <string name="telaregistrarusuario_msgerro_et_confirmacao_senha">The password confirmation field is required!</string>
    <string name="telaregistrarusuario_msgerro_senhasnaosaoiguais">Oops: The password and confirmation password do not match!</string>
    <string name="telaesquecisenha_btn_esqueci_senha">Redefine password</string>
    <string name="telaesquecisenha_tv_mensagem_titulo">Has no Password ? No problem! Enter the information below to reset the password</string>
    <string name="telalogin_msg_dialogo_titulo">Authentication</string>
    <string name="telalogin_msg_dialogo_mensagem">Wait enguanto your data is being validated!</string>
    <string name="telalogin_msgerro_conexao_com_servidor">Oops: Was there a connection error to the server!</string>
    <string name="telaregistrarusuario_tv_telefone">Telephone</string>
    <string name="telaregistrarusuario_et_telefone">Enter your phone number...</string>
    <string name="telaregistrarusuario_tv_dtnascimento_dia">Birth day</string>
    <string name="telaregistrarusuario_et_dtnascimento_et_dtnascimento_dia">Enter the day of the date of his birth...</string>
    <string name="telaregistrarusuario_tv_dtnascimento_mes">Birth month</string>
    <string name="telaregistrarusuario_et_dtnascimento_mes">Enter the month of date of birth...</string>
</resources>
