<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/telalogin_tv_email"/>

    <EditText
        android:id="@+id/telalogin_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:hint="@string/telalogin_et_email"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/telalogin_tv_senha"/>

    <EditText
        android:id="@+id/telalogin_et_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/telalogin_et_senha"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/telalogin_btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/telalogin_btn_registrar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="3dp"
            android:layout_height="3dp"/>

        <Button
            android:id="@+id/telalogin_btn_acessar_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/telalogin_btn_acessar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/telalogin_tv_esqueci_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/telalogin_tv_esqueci_senha"/>
</LinearLayout>